Atempted to fix box scaling issues on safari

--- a/src/styles/partials/_setup.scss
+++ b/src/styles/partials/_setup.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     margin: auto;
     margin-left: 1rem;
     margin-right: 1rem;
@@ -61,6 +61,10 @@
     }
     input {
         font-family: "Open Sans", sans-serif;
+        min-height: 0;
+        flex-basis: auto;
+        height:auto;
+        margin: auto;
     }
 }
 
